fix fontawesome 5 display issue in the estimates table collapse

--- a/voyages/sitemedia/scss/main.scss
+++ b/voyages/sitemedia/scss/main.scss
@@ -501,13 +501,15 @@ footer {
 
 // accordion plus and minus indicators
 .accordion .card-header:after {
-    font-family: 'FontAwesome';  
-    content: "\f068";
+    font-family: 'Font Awesome 5 Free';  
+    content: "\f146";
     float: right; 
 }
+
 .accordion .card-header.collapsed:after, .accordion .card-header .show:after {
     /* symbol for "collapsed" panels */
-    content: "\f067"; 
+    font-family: 'Font Awesome 5 Free';  
+    content: "\f0fe"; 
 }
 .card-header:first-child {
   border-radius: 0;
